--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
   <meta charset="UTF-8">
   <title>Слабый герой (2022) смотреть бесплатно</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Одарённый ученик Ён Ши-Ын борется с насилием в школе, используя ум и психологию.">
+  <meta name="description" content="Действие разворачивается вокруг Ён Ши-Ына — одаренного ученика, который использует ум против школьного насилия.">
   <meta property="og:image" content="https://i.postimg.cc/cHQ5ThZD/2022.jpg">
-  <meta name="twitter:image" content="https://i.postimg.cc/cHQ5ThZD/2022.jpg">
-  <meta property="og:type" content="video.tv_show">
-  <meta property="og:title" content="Слабый герой (2022) смотреть бесплатно">
-  <meta property="og:description" content="Сериал о школьнике, который даёт отпор хулиганам благодаря интеллекту.">
   <style>
     html, body {
       margin: 0;
@@ -34,47 +30,54 @@
 </head>
 <body>
 
-  <div class="player-container">
-    <div id="player"></div>
-  </div>
+<div class="player-container">
+  <div id="player"></div>
+</div>
 
-  <script src="playerjs.js"></script>
-  <script>
-    var playlist = [
-      {
-        title: "1 Сезон",
-        folder: [
-          { title: "1 Серия", file: "https://pixeldrain.com/api/file/vv2Udqo1" },
-          { title: "2 Серия", file: "https://pixeldrain.com/api/file/5nDG6bTs" },
-          { title: "3 Серия", file: "https://pixeldrain.com/api/file/yAnEkgBv" },
-          { title: "4 Серия", file: "https://pixeldrain.com/api/file/gDYR65Mp" },
-          { title: "5 Серия", file: "https://pixeldrain.com/api/file/o3YwcrMj" },
-          { title: "6 Серия", file: "https://pixeldrain.com/api/file/na3Jnmi3" },
-          { title: "7 Серия", file: "https://pixeldrain.com/api/file/pJxKkSo5" },
-          { title: "8 Серия", file: "https://pixeldrain.com/api/file/QL1Wrmjm" }
-        ]
-      },
-      {
-        title: "2 Сезон",
-        folder: [
-          { title: "1 Серия", file: "https://pixeldrain.com/api/file/3ya79LAE" },
-          { title: "2 Серия", file: "https://pixeldrain.com/api/file/msh7m5Ui" },
-          { title: "3 Серия", file: "https://pixeldrain.com/api/file/eHxipqtZ" },
-          { title: "4 Серия", file: "https://pixeldrain.com/api/file/LxXM72TY" },
-          { title: "5 Серия", file: "https://pixeldrain.com/api/file/vYxGmTdy" },
-          { title: "6 Серия", file: "https://pixeldrain.com/api/file/oSXzjMg6" },
-          { title: "7 Серия", file: "https://pixeldrain.com/api/file/qQGyLVAh" },
-          { title: "8 Серия", file: "https://pixeldrain.com/api/file/um2NzxpJ" }
-        ]
-      }
-    ];
+<script src="playerjs.js"></script>
+<script>
+  const playlist = [
+    {
+      "title": "1 Сезон ",
+      "folder": [
+        { "title": "1 Серия", "file": "https://pixeldrain.com/api/file/vv2Udqo1?dowload" },
+        { "title": "2 Серия", "file": "https://pixeldrain.com/api/file/5nDG6bTs?dowload" },
+        { "title": "3 Серия", "file": "https://pixeldrain.com/api/file/yAnEkgBv?dowload" },
+        { "title": "4 Серия", "file": "https://pixeldrain.com/api/file/gDYR65Mp?dowload" },
+        { "title": "5 Серия", "file": "https://pixeldrain.com/api/file/o3YwcrMj?dowload" },
+        { "title": "6 Серия", "file": "https://pixeldrain.com/api/file/na3Jnmi3?dowload" },
+        { "title": "7 Серия", "file": "https://pixeldrain.com/api/file/pJxKkSo5?dowload" },
+        { "title": "8 Серия", "file": "https://pixeldrain.com/api/file/QL1Wrmjm?dowload" }
+      ]
+    },
+    {
+      "title": "2 Сезон ",
+      "folder": [
+        { "title": "1 Серия", "file": "https://pixeldrain.com/api/file/3ya79LAE?dowload" },
+        { "title": "2 Серия", "file": "https://pixeldrain.com/api/file/msh7m5Ui?dowload" },
+        { "title": "3 Серия", "file": "https://pixeldrain.com/api/file/eHxipqtZ?dowload" },
+        { "title": "4 Серия", "file": "https://pixeldrain.com/api/file/LxXM72TY?dowload" },
+        { "title": "5 Серия", "file": "https://pixeldrain.com/api/file/vYxGmTdy?dowload" },
+        { "title": "6 Серия", "file": "https://pixeldrain.com/api/file/oSXzjMg6?dowload" },
+        { "title": "7 Серия", "file": "https://pixeldrain.com/api/file/qQGyLVAh?dowload" },
+        { "title": "8 Серия", "file": "https://pixeldrain.com/api/file/um2NzxpJ?dowload" }
+      ]
+    }
+  ];
 
-    new Playerjs({
-      id: "player",
-      file: playlist,
-      poster: "https://i.postimg.cc/cHQ5ThZD/2022.jpg"
-    });
-  </script>
+  const player = new Playerjs({
+    id: "player",
+    file: playlist,
+    poster: "https://i.postimg.cc/cHQ5ThZD/2022.jpg"
+  });
+
+  // Автоматическое включение звука после клика
+  document.body.addEventListener("click", function playWithSoundOnce() {
+    player.api("volume", 100);
+    player.api("play");
+    document.body.removeEventListener("click", playWithSoundOnce);
+  });
+</script>
 
 </body>
 </html>
