--- a/index.html
+++ b/index.html
@@ -2,82 +2,57 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Слабый герой (2022) смотреть бесплатно</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Действие разворачивается вокруг Ён Ши-Ына — одаренного ученика, который использует ум против школьного насилия.">
-  <meta property="og:image" content="https://i.postimg.cc/cHQ5ThZD/2022.jpg">
+  <title>Ошибка воспроизведения звука</title>
+  <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: #000;
-      width: 100%;
-      height: 100%;
+    body {
+      background-color: #ffffff;
+      color: #980000;
+      font-family: 'Jost', sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      margin: 0;
     }
-    .player-container {
-      width: 90vw;
-      max-width: 960px;
-      aspect-ratio: 16 / 9;
+
+    .error-box {
+      background-color: #fff;
+      border: 2px solid #980000;
+      border-radius: 12px;
+      padding: 40px;
+      max-width: 600px;
+      text-align: center;
+      box-shadow: 0 0 12px rgba(152, 0, 0, 0.3);
     }
-    #player {
-      width: 100%;
-      height: 100%;
+
+    .error-box h1 {
+      color: #980000;
+      margin-bottom: 20px;
+      font-size: 28px;
+    }
+
+    .error-box p {
+      margin-bottom: 15px;
+      font-size: 18px;
+    }
+
+    .contact {
+      color: #980000;
+      text-decoration: underline;
+      cursor: pointer;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
 
-<div class="player-container">
-  <div id="player"></div>
-</div>
-
-<script src="playerjs.js"></script>
-<script>
-  const playlist = [
-    {
-      "title": "1 Сезон ",
-      "folder": [
-        { "title": "1 Серия", "file": "https://pixeldrain.com/api/file/vv2Udqo1?dowload" },
-        { "title": "2 Серия", "file": "https://pixeldrain.com/api/file/5nDG6bTs?dowload" },
-        { "title": "3 Серия", "file": "https://pixeldrain.com/api/file/yAnEkgBv?dowload" },
-        { "title": "4 Серия", "file": "https://pixeldrain.com/api/file/gDYR65Mp?dowload" },
-        { "title": "5 Серия", "file": "https://pixeldrain.com/api/file/o3YwcrMj?dowload" },
-        { "title": "6 Серия", "file": "https://pixeldrain.com/api/file/na3Jnmi3?dowload" },
-        { "title": "7 Серия", "file": "https://pixeldrain.com/api/file/pJxKkSo5?dowload" },
-        { "title": "8 Серия", "file": "https://pixeldrain.com/api/file/QL1Wrmjm?dowload" }
-      ]
-    },
-    {
-      "title": "2 Сезон ",
-      "folder": [
-        { "title": "1 Серия", "file": "https://pixeldrain.com/api/file/3ya79LAE?dowload" },
-        { "title": "2 Серия", "file": "https://pixeldrain.com/api/file/msh7m5Ui?dowload" },
-        { "title": "3 Серия", "file": "https://pixeldrain.com/api/file/eHxipqtZ?dowload" },
-        { "title": "4 Серия", "file": "https://pixeldrain.com/api/file/LxXM72TY?dowload" },
-        { "title": "5 Серия", "file": "https://pixeldrain.com/api/file/vYxGmTdy?dowload" },
-        { "title": "6 Серия", "file": "https://pixeldrain.com/api/file/oSXzjMg6?dowload" },
-        { "title": "7 Серия", "file": "https://pixeldrain.com/api/file/qQGyLVAh?dowload" },
-        { "title": "8 Серия", "file": "https://pixeldrain.com/api/file/um2NzxpJ?dowload" }
-      ]
-    }
-  ];
-
-  const player = new Playerjs({
-    id: "player",
-    file: playlist,
-    poster: "https://i.postimg.cc/cHQ5ThZD/2022.jpg"
-  });
-
-  // Автоматическое включение звука после клика
-  document.body.addEventListener("click", function playWithSoundOnce() {
-    player.api("volume", 100);
-    player.api("play");
-    document.body.removeEventListener("click", playWithSoundOnce);
-  });
-</script>
+  <div class="error-box">
+    <h1>⚠️ Ошибка: Отсутствует звук</h1>
+    <p>В этом видео нет звуковой дорожки. Вы не услышите, что говорят в сериале.</p>
+    <p>Это может быть связано с неправильной загрузкой файла или повреждённым источником.</p>
+    <p><span class="contact" onclick="alert('Пожалуйста, свяжитесь с владельцем сайта или загрузчиком файла для устранения проблемы.');">Свяжитесь с поддержкой</span>, чтобы мы могли это исправить.</p>
+  </div>
 
 </body>
 </html>
